Added My Tracks and Courses

--- a/index.html
+++ b/index.html
@@ -7,9 +7,12 @@
 <body>
     <h1>Ayuba Abdullahi Jr</h1>
     <p>
-        Full Name: Ayuba Abdullahi Jr <br />
-        <email>Email: ayubaabdullahijr@gmail.com</email> <br />
-        Slack Username: aajunior88<br />
+        <h2>Name: Ayuba Abdullahi Jr</h2>
+        <h2><email>Email: ayubaabdullahijr@gmail.com</email></h2>
+        <h2>Username: aajunior88</h2>
+        <h2>Track: FrontEnd</h2>
+        <h2>Courses: HTML, CSS and JS</h2>
+
     </p>
 
 </body>
